# E-Commerce-API

./: .dockerignore  .env  .gitignore  .railwayignore  .vercelignore  API_ENDPOINTS_MATCHING.md  CORS_FIX_STEPS.md  DEPLOYMENT.md  DEPLOY_BOTH.md  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  Dockerfile  FIXES_APPLIED.md  FIX_RENDER_CORS.md  FREE_HOSTING_OPTIONS.md  HOW_TO_ADD_IMAGES.md  NIXPACKS_SETUP.md  Procfile  QUICK_FIX_STATUS3.md  QUICK_RAILWAY_DEPLOY.txt  QUICK_UPDATE_ENV.txt  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOY_COMPLETE.md  RAILWAY_FRONTEND_SETUP.md  RAILWAY_SETUP.md  README.md  RENDER_TROUBLESHOOTING.md  SECURITY_REMOVED.md  SETUP_DATABASE.md  TROUBLESHOOTING_NETWORK_ERROR.md  UPDATE_VERCEL_ENV.md  VERCEL_DEPLOY.md  alembic.ini  docker-entrypoint.sh  env.backend.example  fly.toml  main.py  nixpacks.toml  pyproject.toml  (+6 more)
app/: app.py
app/config/: config.py
app/core/: db_init.py  dependency.py  redis_cli.py
app/middleware/: AuthMiddleware.py  CORSMiddlewareBackup.py  Logging_middleware.py  TokenRotationMiddleware.py
app/models/: DataTable.py
app/schemas/: order_schemas.py  paymentt_shcemas.py  product_schemas.py  user_schemas.py
app/security/: password_hashed.py  prevent_brutefore.py
app/services/: authentication_service.py  jwt_service.py  order_management.py  (+1 more)
frontend/: .env  .vercelignore  README.md  env.frontend.example  netlify.toml  nixpacks.toml  package-lock.json  package.json  railway.json  start_server.py  tailwind.config.js  vercel.json  vite.config.js
images/: .gitkeep
logs/: E_Commerce_LOGS.json
migrations/: env.py
(+32 files in other folders)
